# rust-axum

./: Cargo.toml
src/: main.rs
templates/: index.html  users.html
